# helm_django_app

./: README.md
.github/workflows/: release.yml
app/: .dockerignore  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/app/: settings.py  urls.py
app/app/management/commands/: locked_migrate.py
app/main/: models.py  views.py
app/main/migrations/: 0001_initial.py  0002_question_suggested_answer.py
app/main/templates/: index.html
chart/: Chart.yaml  values.yaml
chart/templates/: django-deployment.yaml  django-service.yaml  postgres-deployment.yaml  postgres-service.yaml  secret.yaml
chart/templates/tests/: test-django-connection.yaml  test-django-version.yaml  test-postgres-connection.yaml
